# secondbrain

./: .continues-handoff.md  .env.example  .gitignore  README.md  api.py  embeddings.py  extractors.py  firebase_admin_app.py  ingest.py  ingestion.py  knowledge_ai.py  package-lock.json  package.json  pyproject.toml  storage.py
.rocketride/: services-catalog.json
.rocketride/docs/: ROCKETRIDE_COMPONENT_REFERENCE.md
.rocketride/schema/: accessibility_describe.json  agent_crewai.json  agent_crewai_manager.json  agent_crewai_subagent.json  agent_deepagent.json  agent_deepagent_subagent.json  agent_langchain.json  agent_rocketride.json  anonymize_text.json  astra_db.json  audio_player.json  audio_transcribe.json  audio_tts.json  chat.json  chroma.json  db_clickhouse.json  db_mysql.json  db_neo4j.json  db_postgres.json  db_supabase.json  dictionary.json  dropper.json  elasticsearch.json  embedding_image.json  embedding_openai.json  hash.json  (+76 more)
backend/: __init__.py  agent.py  agent_tools.py  api.py  config.py  embeddings.py  extractors.py  file_storage.py  firebase_admin_app.py  github_storage.py  google_drive.py  ingest.py  ingestion.py  knowledge_ai.py  models.py  storage.py
data/: graph.json  posts.json  sources.json
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
routers/: chat.py  misc.py  sources.py
services/: account_service.py  auth_middleware.py  chat_service.py  enrichment.py  retrieval.py
storage_backends/: __init__.py  base.py  firestore.py  memory.py  utils.py
tests/: conftest.py  test_backend.py
(+69 files in other folders)
