[project]
name = "Second-Brain"
version = "0.1.0"
description = "Personal knowledge-base ingestion and assistant prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic",
  "fastapi",
  "firebase-admin",
  "google-api-python-client",
  "google-auth",
  "google-auth-httplib2",
  "httpx",
  "pillow",
  "pypdf",
  "python-dotenv>=1.2.2",
  "python-multipart",
  "uvicorn[standard]",
  "youtube-transcript-api",
]

[dependency-groups]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]
